Only offer mass deletion endpoint
